# c-http-server

./: Makefile.am  README.md  c-server-schema.excalidraw  config.h  configure  configure.ac
.github/workflows/: c-cpp.yml
src/: Makefile.am  main.c  should_build.h
src/threadpool/: Makefile.am  libthreadpool.h  queue.c  queue.h  threadpool.c  threadpool.h
tests/: Makefile.am  check.c  check_buildtool.c  check_threadpool.c
